--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+file.reference.unalcol_agents.jar=lib\\unalcol_agents.jar
 #Thu Feb 18 18:19:25 COT 2016
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
@@ -109,7 +110,8 @@ javac.classpath=\
     ${file.reference.velocity-1.4.jar}:\
     ${file.reference.velocity-dep-1.4.jar}:\
     ${file.reference.velocity-tools-1.1-rc1.jar}:\
-    ${file.reference.wstx-asl-3.2.6.jar}
+    ${file.reference.wstx-asl-3.2.6.jar}:\
+    ${file.reference.unalcol_agents.jar}
 javadoc.noindex=false
 file.reference.unalcol_random.jar=lib/unalcol_random.jar
 annotation.processing.enabled.in.editor=false
