--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,162 +1,105 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=NetworkRecoverySim
-application.vendor=arlese.rodriguezp
-build.classes.dir=${build.dir}/classes
+#Mon Aug 12 10:51:07 COT 2019
+javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/NetworkRecoverySim.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
-excludes=
-file.reference.autocomplete.jar=lib\\autocomplete.jar
-file.reference.collections-generic-4.01.jar=lib\\collections-generic-4.01.jar
-file.reference.colt-1.2.0.jar=lib\\colt-1.2.0.jar
-file.reference.commons-discovery-0.5.jar=lib\\commons-discovery-0.5.jar
-file.reference.commons-exec-1.1.jar=lib\\commons-exec-1.1.jar
-file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
-file.reference.concurrent-1.3.4.jar=lib\\concurrent-1.3.4.jar
-file.reference.encog-core-3.0.1.jar=lib\\encog-core-3.0.1.jar
-file.reference.flexdock-0.5.1.jar=lib\\flexdock-0.5.1.jar
-file.reference.flexdock-demo-0.5.2.jar=lib\\flexdock-demo-0.5.2.jar
-file.reference.j3d-core-1.3.1.jar=lib\\j3d-core-1.3.1.jar
-file.reference.jcommon-1.0.17.jar=lib\\jcommon-1.0.17.jar
-file.reference.jdom.jar=lib\\jdom.jar
-file.reference.jfreechart-1.0.14.jar=lib\\jfreechart-1.0.14.jar
-file.reference.jgap.jar=lib\\jgap.jar
-file.reference.jung-3d-2.0.1.jar=lib\\jung-3d-2.0.1.jar
-file.reference.jung-3d-demos-2.0.1.jar=lib\\jung-3d-demos-2.0.1.jar
-file.reference.jung-algorithms-2.0.1.jar=lib\\jung-algorithms-2.0.1.jar
-file.reference.jung-api-2.0.1.jar=lib\\jung-api-2.0.1.jar
-file.reference.jung-graph-impl-2.0.1.jar=lib\\jung-graph-impl-2.0.1.jar
-file.reference.jung-io-2.0.1.jar=lib\\jung-io-2.0.1.jar
 file.reference.jung-jai-2.0.1.jar=lib\\jung-jai-2.0.1.jar
-file.reference.jung-jai-samples-2.0.1.jar=lib\\jung-jai-samples-2.0.1.jar
-file.reference.jung-samples-2.0.1.jar=lib\\jung-samples-2.0.1.jar
-file.reference.jung-visualization-2.0.1.jar=lib\\jung-visualization-2.0.1.jar
-file.reference.junit.jar=lib\\junit.jar
-file.reference.log4j.jar=lib\\log4j.jar
-file.reference.rsyntaxtextarea.jar=lib\\rsyntaxtextarea.jar
-file.reference.stax-api-1.0.1.jar=lib\\stax-api-1.0.1.jar
-file.reference.trove.jar=lib\\trove.jar
+javadoc.author=false
+file.reference.autocomplete.jar=lib\\autocomplete.jar
 file.reference.unalcol_agents.jar=lib\\unalcol_agents.jar
-file.reference.unalcol_core.jar=lib\\unalcol_core.jar
-file.reference.unalcol_filesystem.jar=lib\\unalcol_filesystem.jar
-file.reference.unalcol_math.jar=lib\\unalcol_math.jar
-file.reference.unalcol_primitives.jar=lib\\unalcol_primitives.jar
-file.reference.unalcol_random.jar=lib\\unalcol_random.jar
-file.reference.unalcol_sort.jar=lib\\unalcol_sort.jar
-file.reference.unalcol_structures.jar=lib\\unalcol_structures.jar
-file.reference.vecmath-1.3.1.jar=lib\\vecmath-1.3.1.jar
-file.reference.velocity-1.4.jar=lib\\velocity-1.4.jar
-file.reference.velocity-dep-1.4.jar=lib\\velocity-dep-1.4.jar
-file.reference.velocity-tools-1.1-rc1.jar=lib\\velocity-tools-1.1-rc1.jar
-file.reference.wstx-asl-3.2.6.jar=lib\\wstx-asl-3.2.6.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.autocomplete.jar}:\
-    ${file.reference.collections-generic-4.01.jar}:\
-    ${file.reference.colt-1.2.0.jar}:\
-    ${file.reference.commons-discovery-0.5.jar}:\
-    ${file.reference.commons-exec-1.1.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.concurrent-1.3.4.jar}:\
-    ${file.reference.encog-core-3.0.1.jar}:\
-    ${file.reference.flexdock-0.5.1.jar}:\
-    ${file.reference.flexdock-demo-0.5.2.jar}:\
-    ${file.reference.j3d-core-1.3.1.jar}:\
-    ${file.reference.jcommon-1.0.17.jar}:\
-    ${file.reference.jdom.jar}:\
-    ${file.reference.jfreechart-1.0.14.jar}:\
-    ${file.reference.jgap.jar}:\
-    ${file.reference.jung-3d-2.0.1.jar}:\
-    ${file.reference.jung-3d-demos-2.0.1.jar}:\
-    ${file.reference.jung-algorithms-2.0.1.jar}:\
-    ${file.reference.jung-api-2.0.1.jar}:\
-    ${file.reference.jung-graph-impl-2.0.1.jar}:\
-    ${file.reference.jung-io-2.0.1.jar}:\
-    ${file.reference.jung-jai-2.0.1.jar}:\
-    ${file.reference.jung-jai-samples-2.0.1.jar}:\
-    ${file.reference.jung-samples-2.0.1.jar}:\
-    ${file.reference.jung-visualization-2.0.1.jar}:\
-    ${file.reference.junit.jar}:\
-    ${file.reference.log4j.jar}:\
-    ${file.reference.rsyntaxtextarea.jar}:\
-    ${file.reference.stax-api-1.0.1.jar}:\
-    ${file.reference.trove.jar}:\
-    ${file.reference.unalcol_agents.jar}:\
-    ${file.reference.unalcol_core.jar}:\
-    ${file.reference.unalcol_filesystem.jar}:\
-    ${file.reference.unalcol_math.jar}:\
-    ${file.reference.unalcol_primitives.jar}:\
-    ${file.reference.unalcol_random.jar}:\
-    ${file.reference.unalcol_sort.jar}:\
-    ${file.reference.unalcol_structures.jar}:\
-    ${file.reference.vecmath-1.3.1.jar}:\
-    ${file.reference.velocity-1.4.jar}:\
-    ${file.reference.velocity-dep-1.4.jar}:\
-    ${file.reference.velocity-tools-1.1-rc1.jar}:\
-    ${file.reference.wstx-asl-3.2.6.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+build.sysclasspath=ignore
+file.reference.rsyntaxtextarea.jar=lib\\rsyntaxtextarea.jar
+file.reference.commons-discovery-0.5.jar=lib\\commons-discovery-0.5.jar
 javac.target=1.8
+build.generated.dir=${build.dir}/generated
+file.reference.flexdock-demo-0.5.2.jar=lib\\flexdock-demo-0.5.2.jar
+run.classpath=${javac.classpath}\:${build.classes.dir}
+file.reference.jung-algorithms-2.0.1.jar=lib\\jung-algorithms-2.0.1.jar
+file.reference.vecmath-1.3.1.jar=lib\\vecmath-1.3.1.jar
+file.reference.jdom.jar=lib\\jdom.jar
+file.reference.unalcol_sort.jar=lib\\unalcol_sort.jar
+debug.test.classpath=${run.test.classpath}
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+build.dir=build
+javac.deprecation=false
+file.reference.colt-1.2.0.jar=lib\\colt-1.2.0.jar
+file.reference.unalcol_filesystem.jar=lib\\unalcol_filesystem.jar
+file.reference.jung-jai-samples-2.0.1.jar=lib\\jung-jai-samples-2.0.1.jar
+test.src.dir=test
+junit.selected.version=4
+file.reference.jung-3d-2.0.1.jar=lib\\jung-3d-2.0.1.jar
+includes=**
+application.vendor=arlese.rodriguezp
+mkdist.disabled=false
+jar.compress=false
+file.reference.jung-samples-2.0.1.jar=lib\\jung-samples-2.0.1.jar
+javac.external.vm=true
+annotation.processing.processors.list=
+javadoc.version=false
+file.reference.unalcol_math.jar=lib\\unalcol_math.jar
+build.classes.dir=${build.dir}/classes
+file.reference.junit.jar=lib\\junit.jar
+file.reference.jung-visualization-2.0.1.jar=lib\\jung-visualization-2.0.1.jar
+dist.dir=dist
+manifest.file=manifest.mf
+file.reference.j3d-core-1.3.1.jar=lib\\j3d-core-1.3.1.jar
+file.reference.trove.jar=lib\\trove.jar
+javac.source=1.8
+run.jvmargs=
+file.reference.encog-core-3.0.1.jar=lib\\encog-core-3.0.1.jar
+javac.test.processorpath=${javac.test.classpath}
+file.reference.jung-graph-impl-2.0.1.jar=lib\\jung-graph-impl-2.0.1.jar
+dist.archive.excludes=
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+file.reference.velocity-dep-1.4.jar=lib\\velocity-dep-1.4.jar
+javadoc.notree=false
+dist.jar=${dist.dir}/NetworkRecoverySim.jar
+file.reference.log4j.jar=lib\\log4j.jar
+platform.active=default_platform
+annotation.processing.enabled=true
+file.reference.unalcol_core.jar=lib\\unalcol_core.jar
+main.class=networkrecoverysim.NetworkRecoverySim
+dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.velocity-1.4.jar=lib\\velocity-1.4.jar
+file.reference.jung-io-2.0.1.jar=lib\\jung-io-2.0.1.jar
+file.reference.jfreechart-1.0.14.jar=lib\\jfreechart-1.0.14.jar
+javadoc.additionalparam=
+file.reference.unalcol_structures.jar=lib\\unalcol_structures.jar
+javac.classpath=${file.reference.autocomplete.jar}\:${file.reference.collections-generic-4.01.jar}\:${file.reference.colt-1.2.0.jar}\:${file.reference.commons-discovery-0.5.jar}\:${file.reference.commons-exec-1.1.jar}\:${file.reference.commons-logging-1.1.1.jar}\:${file.reference.concurrent-1.3.4.jar}\:${file.reference.encog-core-3.0.1.jar}\:${file.reference.flexdock-0.5.1.jar}\:${file.reference.flexdock-demo-0.5.2.jar}\:${file.reference.j3d-core-1.3.1.jar}\:${file.reference.jcommon-1.0.17.jar}\:${file.reference.jdom.jar}\:${file.reference.jfreechart-1.0.14.jar}\:${file.reference.jgap.jar}\:${file.reference.jung-3d-2.0.1.jar}\:${file.reference.jung-3d-demos-2.0.1.jar}\:${file.reference.jung-algorithms-2.0.1.jar}\:${file.reference.jung-api-2.0.1.jar}\:${file.reference.jung-graph-impl-2.0.1.jar}\:${file.reference.jung-io-2.0.1.jar}\:${file.reference.jung-jai-2.0.1.jar}\:${file.reference.jung-jai-samples-2.0.1.jar}\:${file.reference.jung-samples-2.0.1.jar}\:${file.reference.jung-visualization-2.0.1.jar}\:${file.reference.junit.jar}\:${file.reference.log4j.jar}\:${file.reference.rsyntaxtextarea.jar}\:${file.reference.stax-api-1.0.1.jar}\:${file.reference.trove.jar}\:${file.reference.unalcol_agents.jar}\:${file.reference.unalcol_core.jar}\:${file.reference.unalcol_filesystem.jar}\:${file.reference.unalcol_math.jar}\:${file.reference.unalcol_primitives.jar}\:${file.reference.unalcol_random.jar}\:${file.reference.unalcol_sort.jar}\:${file.reference.unalcol_structures.jar}\:${file.reference.vecmath-1.3.1.jar}\:${file.reference.velocity-1.4.jar}\:${file.reference.velocity-dep-1.4.jar}\:${file.reference.velocity-tools-1.1-rc1.jar}\:${file.reference.wstx-asl-3.2.6.jar}
+javadoc.noindex=false
+file.reference.unalcol_random.jar=lib\\unalcol_random.jar
+annotation.processing.enabled.in.editor=false
+javadoc.private=false
+file.reference.commons-exec-1.1.jar=lib\\commons-exec-1.1.jar
+javadoc.encoding=${source.encoding}
+build.test.classes.dir=${build.dir}/test/classes
+file.reference.jung-3d-demos-2.0.1.jar=lib\\jung-3d-demos-2.0.1.jar
+javac.compilerargs=
+file.reference.jcommon-1.0.17.jar=lib\\jcommon-1.0.17.jar
+source.encoding=UTF-8
+file.reference.flexdock-0.5.1.jar=lib\\flexdock-0.5.1.jar
+meta.inf.dir=${src.dir}/META-INF
+annotation.processing.run.all.processors=true
+excludes=
+application.title=NetworkRecoverySim
+file.reference.unalcol_primitives.jar=lib\\unalcol_primitives.jar
+file.reference.stax-api-1.0.1.jar=lib\\stax-api-1.0.1.jar
+javac.processorpath=${javac.classpath}
+file.reference.concurrent-1.3.4.jar=lib\\concurrent-1.3.4.jar
+build.test.results.dir=${build.dir}/test/results
+file.reference.jgap.jar=lib\\jgap.jar
+javadoc.use=true
+endorsed.classpath=
+javadoc.nonavbar=false
+file.reference.jung-api-2.0.1.jar=lib\\jung-api-2.0.1.jar
+javadoc.windowtitle=
+file.reference.collections-generic-4.01.jar=lib\\collections-generic-4.01.jar
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-main.class=networkrecoverysim.NetworkRecoverySim
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+file.reference.wstx-asl-3.2.6.jar=lib\\wstx-asl-3.2.6.jar
 src.dir=src
-test.src.dir=test
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${run.classpath}
+file.reference.velocity-tools-1.1-rc1.jar=lib\\velocity-tools-1.1-rc1.jar
