Changes performed to support spread of information to a given number of hops
Changes performed to support the mode nhopsinfo that spreads initial information to n hops.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,12 @@
+debug.modulepath=\
+    ${run.modulepath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 file.reference.json-20210307.jar=E:\\codes\\TestJSON\\lib\\json-20210307.jar
+javac.modulepath=
+javac.processormodulepath=
+javac.test.modulepath=\
+    ${javac.modulepath}
 #Mon Aug 12 10:51:07 COT 2019
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
@@ -12,6 +20,7 @@ file.reference.commons-discovery-0.5.jar=lib\\commons-discovery-0.5.jar
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
 file.reference.flexdock-demo-0.5.2.jar=lib\\flexdock-demo-0.5.2.jar
+main.class=networkrecoverysim.DataReplicationNodeFailingMain
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -26,6 +35,10 @@ javac.deprecation=false
 file.reference.colt-1.2.0.jar=lib\\colt-1.2.0.jar
 file.reference.unalcol_filesystem.jar=lib\\unalcol_filesystem.jar
 file.reference.jung-jai-samples-2.0.1.jar=lib\\jung-jai-samples-2.0.1.jar
+run.modulepath=\
+    ${javac.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 test.src.dir=test
 junit.selected.version=4
 file.reference.jung-3d-2.0.1.jar=lib\\jung-3d-2.0.1.jar
@@ -62,7 +75,6 @@ file.reference.log4j.jar=lib\\log4j.jar
 platform.active=default_platform
 annotation.processing.enabled=true
 file.reference.unalcol_core.jar=lib\\unalcol_core.jar
-main.class=util.diffExportToGephiCSV
 dist.javadoc.dir=${dist.dir}/javadoc
 file.reference.velocity-1.4.jar=lib\\velocity-1.4.jar
 file.reference.jung-io-2.0.1.jar=lib\\jung-io-2.0.1.jar
